--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,19 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+{% endblock %}
+
 {% block content %}
+
+<div class="container h-100 my-5">
+    <div class="row h-100">
+        <div class="col my-auto">
+            <h1>Testing</h1>
+            <p>This is where the carousel will go</p>
+
+        </div>
+    </div>
+</div>
 
 {% endblock %}
