--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -5,5 +5,25 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="my-5">Login Testing</h1>
+<br>
+<br>
+    <div class="row justify-content-between m-2">
+        <div class="col-6">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Username</label>
+                  <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" name="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+        <div class="col-4">
+          <img src="/media/default.jpg" alt="Image of eye">
+        </div>
+      </div>
 {% endblock %}
