Edit navbar to avoid things sticking behind navbar. Add error message when login is incorrect

--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -19,6 +19,14 @@
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" class="form-control" name="password">
                 </div>
+                    {% if messages %}
+                        <div class="alert alert-danger" role="alert">
+  
+                        {% for message in messages %}
+                        {{ message }}
+                            {% endfor %}
+                  </div>
+                    {% endif %}
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
