Add css/media folders and ability to access them in settings.py and urls.py

--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -31,7 +31,7 @@
               </form>
         </div>
         <div class="col-4">
-          <img src="/media/default.jpg" alt="Image of eye">
+          <img src="/media/IMG_20210324_205417.jpg" alt="Image of eye">
         </div>
       </div>
 {% endblock %}
