--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -30,8 +30,8 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
-        <div class="col-4">
-          <img src="/media/IMG_20210324_205417.jpg" alt="Image of eye">
+        <div class="col-6">
+          <img  class="rounded" width="100%" src="/media/IMG_20210324_205417.jpg" alt="Image of eye">
         </div>
       </div>
 {% endblock %}
