--- a/templates/base.html
+++ b/templates/base.html
@@ -59,10 +59,11 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               {% if request.user.is_authenticated %}
+              <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+              <a class="dropdown-item" href="#">Account Settings</a>
                 {% if request.user.is_superuser %}
                   <a class="dropdown-item" href="#">Website Management</a>
                   {% endif %}
-                <a class="dropdown-item" href="#">Account Settings</a>
               {% else %}
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                 <a class="dropdown-item" href="#">Sign Up</a>
