--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+            </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categories
@@ -66,17 +69,17 @@
                   {% endif %}
               {% else %}
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
-                <a class="dropdown-item" href="#">Sign Up</a>
+                <a class="dropdown-item" href="{% url 'register' %}">Sign Up</a>
               {% endif %}
                 </div>
             </li>
 
-            <form method="GET" action="" class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-
           </div>
+          
+          <form method="GET" action="" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
           <a href="#" class="btn btn-outline-dark" type="button" role="button">
             {% if grand_total %}
               £{{grand_total|floatformat:2}}
@@ -88,6 +91,7 @@
                 </svg>
             </a>
         </nav>
+        <br>
       </header>
 
 
