--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -18,7 +18,9 @@
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" class="form-control" name="password">
+                  <button type="button" class="btn btn-link"><a href="{% url 'register' %}"> Not Registered? Click Here</a></button>
                 </div>
+                
                     {% if messages %}
                         <div class="alert alert-danger" role="alert">
   
@@ -27,6 +29,7 @@
                             {% endfor %}
                   </div>
                     {% endif %}
+
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
