Align the footer content

--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+{% block header %}Login{% endblock %}
 <br>
 <br>
     <div class="row justify-content-between m-2">
