--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-
+{% block header %}Store {% endblock %}
 <div class="album py-5 bg-light">
   <div class="container">
     {% for products in products %}
