--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+{% block header %}Klarart {% endblock %}
 
 <div class="container h-100 my-5">
     <div class="row h-100">
