--- a/members/templates/authentication/register.html
+++ b/members/templates/authentication/register.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+{% block header %}Register {% endblock %}
 <br>
 <h1 class="my-5">Register New Account</h1>
 <br>
