--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                 <a class="dropdown-item" href="{% url 'register' %}">Sign Up</a>
               {% endif %}
+              <a class="dropdown-item" href="{% url 'newsletter' %}">NewsLetter</a>
                 </div>
             </li>
 
@@ -100,39 +101,6 @@
 
     {% block content %}
     {% endblock %}
-
-    <footer class="navbar fixed-bottom navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fixed bottom</a>
-      </div>
-          <!-- Begin Mailchimp Signup Form -->
-            <div id="mc_embed_signup">
-              <form action="https://gmail.us5.list-manage.com/subscribe/post?u=78c77f80fc819709f8ab540c9&amp;id=d117cd0ece" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                  <h2>Monthly Newsletter</h2>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                    <div class="mc-field-group">
-                      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-                      </label>
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                    </div>
-                    <div id="mce-responses" class="clear foot">
-                      <div class="response" id="mce-error-response" style="display:none"></div>
-                      <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_78c77f80fc819709f8ab540c9_d117cd0ece" tabindex="-1" value=""></div>
-                    <div class="optionalParent">
-                      <div class="clear foot">
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                          <p class="brandingLogo"><a href="http://eepurl.com/hMdvsP" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
-                      </div>
-                    </div>
-                  </div>
-              </form>
-            </div>
-    </footer>
-
 
 
     {% block extra_js %}
