--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,11 @@
                 <a class="nav-link" href="{% url 'products' %}">Store</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="{% url 'contact' %}">Contact</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-            </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categories
