Create basic footer, Create basic django contact template/model

--- a/home/templates/contact/contact.html
+++ b/home/templates/contact/contact.html
@@ -9,4 +9,10 @@
 
 <h1>Contact page testing</h1>
 
+<form action="" method="POST">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit">
+</form>
+
 {% endblock %}
