--- a/templates/base.html
+++ b/templates/base.html
@@ -99,6 +99,11 @@
     {% block content %}
     {% endblock %}
 
+    <footer>
+      <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
+    </footer>
 
     {% block extra_js %}
       <script src="https://kit.fontawesome.com/fb3ce16b7a.js" crossorigin="anonymous"></script>
