Edit base footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,9 +99,24 @@
     {% block content %}
     {% endblock %}
 
-    <footer>
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+    <footer class=" text-black sticky-bottom">
+      <div class="container pt-4">
+        <p>Find Us In The Links Below</p>
+        <section class="mb-4">
+          <a class="btn btn-link btn-floating btn-lg" target="_blank" href="https://www.instagram.com/klaradumdum/">
+            <i class="fab fa-instagram" title="Instagram"></i>
+          </a>
+          <a href="#" target="_blank" class="btn btn-link btn-floating btn-lg">
+            <i class="fab fa-pinterest" title="Pinterest"></i>
+          </a>
+          <a href="#" target="_blank" class="btn btn-link btn-floating btn-lg">
+            <i class="fab fa-facebook" title="Facebook"></i>
+          </a>
+          <a href="#" target="_blank" class="btn btn-link btn-floating btn-lg">
+            <i class="fas fa-copyright" title="Copyright"></i>
+          </a>
+          
+        </section>
       </div>
     </footer>
 
