--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,8 @@
 
           </div>
           
-          <form method="GET" action="" class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <form method="GET" action="{% url 'products' %}" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="search" name="q" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
           <a href="#" class="btn btn-outline-dark" type="button" role="button">
