--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
             <input class="form-control mr-sm-2" type="text" placeholder="search" name="q" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-          <a href="#" class="btn btn-outline-dark" type="button" role="button">
+          <a href="{% url 'basket' %}" class="btn btn-outline-dark" type="button" role="button">
             {% if grand_total %}
               £{{grand_total|floatformat:2}}
             {% else %}
