--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -5,6 +5,18 @@
 
 {% block header %}{% endblock %}
 
-<h1>Testing Basket Page</h1>
-
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Basket</h1>
+        </div>
+    </div>
+    <div class="col">
+        {% if basket_items %}
+            <p>This will show items</p>
+        {% else %}
+            <p>This will show empty basket</p>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
