--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
+{% block page_header %}
+{% endblock %}
 
 {% block content %}
 
-{% block header %}{% endblock %}
+
 
 <div class="container">
     <div class="row">
