--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,32 +3,57 @@
 
 {% block content %}
 
-<div class="album py-5 bg-light">
-  <div class="container">
-    {% for product in products %}
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col text-center">
+      <h1>All Products</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="product-container col-10 offset-1">
+      <div class="row mt-1 mb-2"></div>
+      <div class="row">
+        {% for product in products %}
+          <div class="col-sm-6 col-md-6 col-lg-4 col.xl-3">
+            <div class="card h-100 border-0">
+              <a href="">
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
+              </a>
+              <div class="card-footer bg-white pt-0 border.0 text-center">
+                <div class="row">
+                  <div class="col">
+                    <p class="text-center">{{ product.title }}</p>
+                    <p class="text-center font-weight-bold">From: £{{ product.price }}</p>
+                  </div>
+                  <button class="btn btn-primary"><a class="text-white" href="{% url 'product_detail' product.id %}"> View Product</a></button>
 
-        <div class="col">
-          <div class="card shadow-sm">
-            {% if product.image.url %}
-              <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.title }}">
-            {% else %}
-              <img class="img-fluid" src="/media/default.jpg" alt="{{ product.title }}">
-            {% endif %}
-            <div class="card-body">
-              <h5 class="card-title">{{ product.title }}</h5>
-              <p class="card-text">{{ product.description|slice:"50" }}</p>
-              <p class="card-text" >£{{ product.price }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-secondary"> <a href="{% url 'product_detail' product.id %}"> View Product </a></button>
                 </div>
               </div>
             </div>
           </div>
+          {% if forloop.counter|divisibleby:1 %}
+          <div class="col-12 d-sm-none mb-5">
+            <hr>
         </div>
+    {% endif %}                        
+    {% if forloop.counter|divisibleby:2 %}
+        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+            <hr>
+        </div>
+    {% endif %}
+    {% if forloop.counter|divisibleby:3 %}
+        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+            <hr>
+        </div>
+    {% endif %}
+    {% if forloop.counter|divisibleby:4 %}
+        <div class="col-12 d-none d-xl-block mb-5">
+            <hr>
+        </div>
+    {% endif %}
       </div>
-    {% endfor %}
-
-
+    </div>
+  </div>
+</div>
+{% endfor %}
 {% endblock %}
