--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col">
         {% if basket_items %}
-            <p>This will show items</p>
+            <div class="table-responsive"></div>
         {% else %}
             <p>This will show empty basket</p>
         {% endif %}
