--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,15 +19,28 @@
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.description }}</p>
           <div class="col-6">
-            <label for="select">Size</label>
-            <select id="select">
-                <option value="">8 x 10"</option>
-                <option value="">12 x 16"</option>
-                <option value="">20 x 24"</option>
-                <option value="">30 x 26"</option>
-            </select>
-        </div>
-          <a href="#" class="btn btn-primary">Add To Basket</a>
+            <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
+              {% csrf_token %}
+              <div class="form-row">
+                <div class="col-12">
+                  <p><strong>Qty:</strong></p>
+                  <div class="form-group w-50">
+                    <input class="form-control qty-input" type="number" name="Quantity" value="1" min="1" max="99" data-product.id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                  </div>
+              </div>
+              <div class="col-6">
+                <a href="{% url 'products' %}" class="btn">
+                  <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                  </span>
+                  <span>Keep Shopping</span>
+                </a>
+                <input type="submit" class="btn btn-secondary" value="Add To Basked">
+              </div>
+              <input type="hidden" name="redirect_url" value="{{ request.path }}">
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
