--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,6 +26,7 @@
                   <p><strong>Qty:</strong></p>
                   <div class="form-group w-50">
                     <input class="form-control qty-input" type="number" name="Quantity" value="1" min="1" max="99" data-product.id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                    <p class="card-text">{{ product.price }}</p>
                   </div>
               </div>
               <div class="col-6">
