--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="text-center">{{ product.title }}</p>
-                    <p class="text-center font-weight-bold">From: £{{ product.price }}</p>
+                    <p class="text-center font-weight-bold">£{{ product.price }}</p>
                   </div>
                   <button class="btn btn-primary"><a class="text-white" href="{% url 'product_detail' product.id %}"> View Product</a></button>
 
