Add initial content to about.html

--- a/home/templates/about/about.html
+++ b/home/templates/about/about.html
@@ -5,8 +5,95 @@
 {% endblock %}
 
 {% block content %}
-{% block header %}Contact {% endblock %}
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">Question</th>
+            <th scope="col"></th>
+            <th scope="col">Answer</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+        <th scope="row">Who Are We?</th>
+        <th scope="row" width="20%">
+            <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+        </th>
+        <th>We are a small, family run business that believe in
+            perfect, personal presents at a great price.
+            We are a brand new business. But that's a good thing. We are here for
+            one reason and that is to please our customers. We don't like juggernaut businesses
+            because they are all about money :( We are about happiness, honesty and happiness.
+            Notice how happiness is said twice. That's how focused on happiness we are :) 
+        </th>
+        </tr>
+        <tr>
+            <th scope="row">What Do We Do?</th>
+            <th scope="row" width="20%">
+                <img id="table-img" src="/media/IMG_20210324_205417_N5lf8Gx.jpg" alt="">
+            </th>
+            <th> Well that's simple. We sell art. I am a software developer in training and my wife is an artist.
+                That's a pretty good combo if you ask me. She creates the art, I create the website. Our dream is to make as
+                 many people as possible happy with our creations. We sell everything possible (to go on a wall that is!) We hope that
+                  you will find something you like. If you don't find anything you like. Contact us, we love a challenge, 
+                  send us an idea and we will make it for you :)
+            </th>
+            </tr>
+            <tr>
+                <th scope="row">Where Are We?</th>
+                <th scope="row" width="20%">
+                    <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                </th>
+                <th>We are a small, family run business that believe in
+                    perfect, personal presents at a great price.
+                    We are a brand new business. But that's a good thing. We are here for
+                    one reason and that is to please our customers. We don't like juggernaut businesses
+                    because they are all about money :( We are about happiness, honesty and happiness.
+                    Notice how happiness is said twice. That's how focused on it we are :) 
+                </th>
+                </tr>
+                <tr>
+                    <th scope="row">Where Can You Find Us?</th>
+                    <th scope="row" width="20%">
+                        <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                    </th>
+                    <th>We are a small, family run business that believe in
+                        perfect, personal presents at a great price.
+                        We are a brand new business. But that's a good thing. We are here for
+                        one reason and that is to please our customers. We don't like juggernaut businesses
+                        because they are all about money :( We are about happiness, honesty and happiness.
+                        Notice how happiness is said twice. That's how focused on it we are :) 
+                    </th>
+                    </tr>
+                    <tr>
+                        <th scope="row">Why We Don't Charge Shipping</th>
+                        <th scope="row" width="20%">
+                            <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                        </th>
+                        <th>We are a small, family run business that believe in
+                            perfect, personal presents at a great price.
+                            We are a brand new business. But that's a good thing. We are here for
+                            one reason and that is to please our customers. We don't like juggernaut businesses
+                            because they are all about money :( We are about happiness, honesty and happiness.
+                            Notice how happiness is said twice. That's how focused on it we are :) 
+                        </th>
+                        </tr>
+                        <tr>
+                            <th scope="row">What Happens If You Are Not Happy With Us?</th>
+                            <th scope="row" width="20%">
+                                <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                            </th>
+                            <th>We are a small, family run business that believe in
+                                perfect, personal presents at a great price.
+                                We are a brand new business. But that's a good thing. We are here for
+                                one reason and that is to please our customers. We don't like juggernaut businesses
+                                because they are all about money :( We are about happiness, honesty and happiness.
+                                Notice how happiness is said twice. That's how focused on it we are :) 
+                            </th>
+                            </tr>
+    </tbody>
+</table>
 
-<h1>About page testing</h1>
+
 
 {% endblock %}
