--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -25,7 +25,7 @@
                 <div class="col-12">
                   <p><strong>Qty:</strong></p>
                   <div class="form-group w-50">
-                    <input class="form-control qty-input" type="number" name="Quantity" value="1" min="1" max="99" data-product.id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                    <input class="form-control qty-input" type="number" name="quantity" value="1" min="1" max="99" data-product_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                     <p class="card-text">{{ product.price }}</p>
                   </div>
               </div>
