Finish html for about.html page

--- a/home/templates/about/about.html
+++ b/home/templates/about/about.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 <table class="table table-bordered">
+    <h1 class="text-center">About Us</h1>
     <thead>
         <tr>
             <th scope="col">Question</th>
@@ -17,7 +18,7 @@
         <tr>
         <th scope="row">Who Are We?</th>
         <th scope="row" width="20%">
-            <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+            <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="Image of eye">
         </th>
         <th>We are a small, family run business that believe in
             perfect, personal presents at a great price.
@@ -30,7 +31,7 @@
         <tr>
             <th scope="row">What Do We Do?</th>
             <th scope="row" width="20%">
-                <img id="table-img" src="/media/IMG_20210324_205417_N5lf8Gx.jpg" alt="">
+                <img id="table-img" src="/media/images/sun.jpg.jpg" alt="image of woman in sunglasses">
             </th>
             <th> Well that's simple. We sell art. I am a software developer in training and my wife is an artist.
                 That's a pretty good combo if you ask me. She creates the art, I create the website. Our dream is to make as
@@ -42,53 +43,45 @@
             <tr>
                 <th scope="row">Where Are We?</th>
                 <th scope="row" width="20%">
-                    <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                    <img id="table-img" src="/media/images/zebra.jpg.jpg" alt="Image of zebra">
                 </th>
-                <th>We are a small, family run business that believe in
-                    perfect, personal presents at a great price.
-                    We are a brand new business. But that's a good thing. We are here for
-                    one reason and that is to please our customers. We don't like juggernaut businesses
-                    because they are all about money :( We are about happiness, honesty and happiness.
-                    Notice how happiness is said twice. That's how focused on it we are :) 
+                <th>We are based in Sweden, But we are able to ship almost anywhere in the world. 
+                    We cover the cost of shipping so you can pay less and save more :) We are looking to grow 
+                    our business and expand to have a few small showrooms over europe. Or atleast that is the dream.
                 </th>
                 </tr>
                 <tr>
                     <th scope="row">Where Can You Find Us?</th>
                     <th scope="row" width="20%">
-                        <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                        <img id="table-img" src="/media/images/pokeheart.jpg.jpg" alt="pokemon heart image">
                     </th>
-                    <th>We are a small, family run business that believe in
-                        perfect, personal presents at a great price.
-                        We are a brand new business. But that's a good thing. We are here for
-                        one reason and that is to please our customers. We don't like juggernaut businesses
-                        because they are all about money :( We are about happiness, honesty and happiness.
-                        Notice how happiness is said twice. That's how focused on it we are :) 
+                    <th>We have several online platforms on which you can contact us. You can contact us via the contact 
+                        section at the sop of the screen. We aim to reply within 24 hours. You can also checkout the bottom 
+                        of the page for our social media links. You can contact us directly on facebook and instagram. You can 
+                        also see what is going on and keep more up to date with new projects and release dates.
                     </th>
                     </tr>
                     <tr>
                         <th scope="row">Why We Don't Charge Shipping</th>
                         <th scope="row" width="20%">
-                            <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                            <img id="table-img" src="/media/images/night-tree.jpg.jpg" alt="Tree with moonlight background">
                         </th>
-                        <th>We are a small, family run business that believe in
-                            perfect, personal presents at a great price.
-                            We are a brand new business. But that's a good thing. We are here for
-                            one reason and that is to please our customers. We don't like juggernaut businesses
-                            because they are all about money :( We are about happiness, honesty and happiness.
-                            Notice how happiness is said twice. That's how focused on it we are :) 
+                        <th>We want customers to enjoy our pieces, and something that customers don't like are extra 
+                            hidden fees. So we removed that, What you see is what you pay. That way it is a little more simple 
+                            and straight forward, and you are able to focus on what you want instead of rising costs of delivary.
                         </th>
                         </tr>
                         <tr>
                             <th scope="row">What Happens If You Are Not Happy With Us?</th>
                             <th scope="row" width="20%">
-                                <img id="table-img" src="/media/IMG_20210324_205417.jpg" alt="">
+                                <img id="table-img" src="/media/images/horse-girl.jpg.jpg" alt="girl with horse">
                             </th>
-                            <th>We are a small, family run business that believe in
-                                perfect, personal presents at a great price.
-                                We are a brand new business. But that's a good thing. We are here for
-                                one reason and that is to please our customers. We don't like juggernaut businesses
-                                because they are all about money :( We are about happiness, honesty and happiness.
-                                Notice how happiness is said twice. That's how focused on it we are :) 
+                            <th> If you arent happy with us, then we aim to fix it. Please don't hesitate to get in touch 
+                                as we are more than happy to solve any and all issues you may have. Up to including refunds 
+                                and possibly even a free item or two for any troubles. We hope that everyone is happy with us all the 
+                                time. But we also like to have a plan for incase things go wrong. 
+                                So, if something doesn't arrive or arrives broken or you just arent happy with the item you have purchased.
+                                GET IN TOUCH !!!! :) We will fix it
                             </th>
                             </tr>
     </tbody>
