move pictures from media folder to media/images foler

--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -34,7 +34,7 @@
               </form>
         </div>
         <div class="col-6">
-          <img  class="rounded" width="100%" src="/media/IMG_20210324_205417.jpg" alt="Image of eye">
+          <img  class="rounded" width="80%" src="/media/images/sun.jpg.jpg" alt="Image of eye">
         </div>
       </div>
 {% endblock %}
