Add better sizing to about.html. Move all pictures from readme folder to media/images folder

--- a/home/templates/about/about.html
+++ b/home/templates/about/about.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<table class="table table-bordered">
+<table class="table table-bordered col-10 offset-1">
     <h1 class="text-center">About Us</h1>
     <thead>
         <tr>
@@ -17,7 +17,7 @@
     <tbody>
         <tr>
         <th scope="row">Who Are We?</th>
-        <th scope="row" width="20%">
+        <th scope="row" width="fit-content">
             <img id="table-img" src="/media/images/IMG_20210320_210943_324.jpg" alt="Image of eye">
         </th>
         <th>We are a small, family run business that believe in
