--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,6 +18,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.description }}</p>
+          <p class="card-text">£{{ product.price }}</p>
           <div class="col-6">
             <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
               {% csrf_token %}
@@ -25,8 +26,8 @@
                 <div class="col-12">
                   <p><strong>Qty:</strong></p>
                   <div class="form-group w-50">
-                    <input class="form-control qty-input" type="number" name="quantity" value="1" min="1" max="99" data-product_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                    <p class="card-text">{{ product.price }}</p>
+                    <input class="form-control qty-input" type="number" name="quantity" value="1" min="1" max="99">
+
                   </div>
               </div>
               <div class="col-6">
@@ -36,7 +37,7 @@
                   </span>
                   <span>Keep Shopping</span>
                 </a>
-                <input type="submit" class="btn btn-secondary" value="Add To Basked">
+                <input type="submit" class="btn btn-secondary" value="Add To Basket">
               </div>
               <input type="hidden" name="redirect_url" value="{{ request.path }}">
               </div>
