--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -16,7 +16,7 @@
         {% for product in products %}
           <div class="col-sm-6 col-md-6 col-lg-4 col.xl-3">
             <div class="card h-100 border-0">
-              <a href="">
+              <a href="{% url 'product_detail' product.id %}">
                 <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
               </a>
               <div class="card-footer bg-white pt-0 border.0 text-center">
