--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.description }}</p>
-          <p class="card-text">£{{ product.price }}</p>
+          <p class="card-text">{{ product.price }}</p>
           <div class="col-6">
             <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
               {% csrf_token %}
@@ -27,7 +27,6 @@
                   <p><strong>Qty:</strong></p>
                   <div class="form-group w-50">
                     <input class="form-control qty-input" type="number" name="quantity" value="1" min="1" max="99">
-
                   </div>
               </div>
               <div class="col-6">
